// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1846944c4d716d",
  "0acbc5a9502857",
  "16aabcfb714452",
  "03d9e91310912c",
  "14bdb5ed135628",
  "0e6aecd37eb305",
  "17cce676223629",
  "19fe81306d9c47",
  "0c2b2ce41fe4aa",
  "1b00d905d8d1ca",
  "0ac3df817ec9d7",
  "13573548f28b71",
  "1c8a7437911b1c",
  "048cdb6ef032bb",
  "19e1fe5b4da348",
  "0e52159b7eb888",
  "1e4e344a6bc2c3",
  "1ca0e8f10aa81a",
  "1fe1d8cb7803d3",
  "0f80e1b8f66077",
  "070701492c2037",
  "193667832f5f3f",
  "16f55842903a23",
  "1fb70fe9dac6c1",
  "0e1ea098e183eb",
  "0e89ef1bc3ca64",
  "01c6d3b7959739",
  "0160ad55b91d52",
  "0db5ec6d0e58fe",
  "197db8ebda4e54",
  "1e9d4f031c640c",
  "1ce3483c76ed29",
  "070c2206a52e85",
  "0fc1c7b73a3b67",
  "1615674b813c33",
  "1983698f9111da",
  "0fed086c0df55b",
  "0a420d83fd0ca4",
  "02726ce52c55b1",
  "06de6ec0259fc6",
  "07393a407c5e24",
  "1cbdf84772e5ac",
  "0ce963bdbb5e03",
  "1ecb6ec763c094",
  "1c9c03451a6cf4",
  "1671b26841dbe6",
  "05db7e21749998",
  "1eb1e402b165ec",
  "18468dc314842f",
  "09d66060dee349",
  "1c3faa79b43feb",
  "08f34543c58035",
  "0476c1e75ff053",
  "08c59fd31eedcd",
  "193288a5034edf",
  "0f8919d9d9c26f",
  "19b4f8e779e11c",
  "17141cc1c95d34",
  "1cbfe81aa2c600",
  "1fce20e49c2ed3",
  "0e47fabd8b318f",
  "004e300a6f7d87",
  "02d7541f4b4147",
  "00f411cde71dcc",
  "1414c67a7fa61f",
  "0b92e31b39146a",
  "03ce1a9460d8e4",
  "07887e86791ba4",
  "0d95be27dd8f80",
  "019fde5cb0d226",
  "195ac46efea002",
  "1dd84cf64fa640",
  "0af950acdd5aab",
  "09aae866e69683",
  "187c2dd4a715e0",
  "18a7f4a543cce3",
  "03387019de45a1",
  "09d183c52aab42",
  "099d0d0bf99c6e",
  "12b751305d360d",
  "0e10e818566379",
  "0bc3da397297a9",
  "13fb59d38b4d17",
  "0e2af96a8ff494",
  "1f7f0926fe27b6",
  "1b30e68232a9eb",
  "121fcf81af49cd",
  "0e2f4f1872b79d",
  "06b8c3d57c3ea0",
  "1dc2410eb24fe8",
  "1123e3483f043f",
  "0547ff76d08486",
  "0927d73e7a772c",
  "0a42ee337ce47a",
  "077cb22e065e1b",
  "1021a026c3173e",
  "01b3ad272939b6",
  "19cd8c52d61bbc",
  "07b877fe2f852d",
  "0b3ec2e0ea6e2f",
  "0560dbced8b71b",
  "018f1bdc696497",
  "19e1f7ada5f60a",
  "01a07a65f92823",
  "0a79ff5400a821",
  "1d8d1aa5fd9519",
  "16cf5859f37b6d",
  "09ab9d0a9a1656",
  "12409c67dd5e51",
  "1add97a7ac29dc",
  "1729f8f10eeab0",
  "121e584c8c76fc",
  "0ca0b1c087eefe",
  "0210a72ecd9e1f",
  "15268210740502",
  "0a618e3a894f7d",
  "1032373cedb95e",
  "0dcbe5b8269fb8",
  "16cca8be3fc3f2",
  "1ac1c5677e4819",
  "0ea54280ba196d",
  "074aec105a2bbb",
  "1917060c6e71bf",
  "1cd9c4fb0a1b72",
  "085158b37460b7",
  "0a6300a3c66071",
  "09bb86d9766216",
  "141492083c35b9",
  "0e7e63e8c36652",
  "1d5be8979b4641",
  "17d8650b84a326",
  "1014e757fb8b84",
  "0ac63a70adede1",
  "0929f1bf931c93",
  "16fb7e5c6f8320",
  "11cb7a8bdbe4a3",
  "09ce83479442f1",
  "005dae10ca26dd",
  "0b12c796e2740a",
  "0348dc6e12f433",
  "04540312b71502",
  "0d8f3c97f7a585",
  "11646050e3131c",
  "0004c8f44c8226",
  "055ef070f7cc67",
  "122a17c1a885a1",
  "1f01c68ef76633",
  "1cdfa3e74f8dfc",
  "1ecac5931ed4b2",
  "0d44eaab519d0e",
  "1282cfe8ecbb8e",
  "0a4c052019cfcf",
  "1061f578438f4f",
  "12359d17c05314",
  "15ef1496fb116f",
  "09a9f972879b1b",
  "030efe37a43ff0",
  "0f4b55db7afa4f",
  "0e1f2b7d598273",
  "1d3a543286fcf1",
  "0c0e335bd61af1",
  "025413e9d4aa90",
  "173849d5982830",
  "14435ab1785d15",
  "00ff072f29f1fb",
  "12a44c0eec83ff",
  "05a7f3f4b2b654",
  "11d878722ba851",
  "1326108c24fe72",
  "0a6402d2f025b9",
  "0bf5f7f809b9d1",
  "1a4ab2dc6b0222",
  "0b19bccd0a34ef",
  "0e94b568ac13c2",
  "1cdeb579585ce7",
  "0ef8ccf44e8426",
  "1a9f3f19c92e47",
  "04feddba2cfd5e",
  "1f09c40655823f",
  "179fbe496f3cd4",
  "10f7de95b81ff0",
  "1eb5c42ed1045b",
  "185b8857979698",
  "0945332f61cd85",
  "186d8021ad6d4e",
  "0e60bf400f1771",
  "1fff7366085414",
  "026ed5b96ea5e7",
  "04777ce1897832",
  "160f02dc64c806",
  "0120b2dd32442a",
  "0386eaa024fae6",
  "1d6ee957d757be",
  "171a33c89e1950",
  "09626b72d7fe90",
  "034395ede1b2fc",
  "060143eb5f8636",
  "09a9ffc25afe39",
  "1eea23cd1d3d3f",
  "157a59901e5941",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "11f072a496a8a3",
  "04009b3fb7ea9d",
  "0661e1bed76065",
  "155f1c9bfa1c03",
  "131db521b32dd4",
  "1ee41896f01efc",
  "00fccc6de45a16",
  "18ab0fcaec7f21",
  "0c2b2ce41fe4aa",
  "1e650e3f6f2d6d",
  "028ebf4ba078c5",
  "1e42fb39527ee6",
  "1b355bdce84c07",
  "0433a6d6e0614a",
  "03e0461c2159e5",
  "1e11236e2f7bde",
  "06b756f05607a9",
  "0e461fed079a55",
  "0035275c717812",
  "0d46796d5633a4",
  "05cfd29b97f272",
  "084f15ffacdfb9",
  "03029f5f2d0b1d",
  "12a0eb6ae6ee18",
  "1612748f46d656",
  "1b74df0fb348ab",
  "0910a68f49dca2",
  "144d24d33be1aa",
  "1794a44b9ab392",
  "1ccf9d1975c3c5",
  "0f22aa93da8376",
  "02096058f8d017",
  "1b4c17f56e83e6",
  "15b72380f4735c",
  "1c005454c74a19",
  "103a1d29de8faf",
  "0ed7d9bac5ce82",
  "0ea52dc0e268f2",
  "1cce09eca0565a",
  "04387886610cc5",
  "0bea11dae9e521",
  "0c4ddb8736f9ba",
  "1a47869818ae7b",
  "0a69abc84f130d",
  "12e6103e1b6481",
  "19710e914f7cd0",
  "147e2c07d5e5a9",
  "1e24c5cc0e5f4a",
  "1a80edd562ffa9",
  "154194e974307f",
  "12187d23701a55",
  "08f34543c58035",
  "0916aa841830b7",
  "19b41f98719b89",
  "099ecf1f645c0a",
  "1ffe1a8288c5e4",
  "08299cced5f03f",
  "17141cc1c95d34",
  "0f25f3815e3a25",
  "138d91df957e56",
  "0871b86675d4ef",
  "07bcc5383d5646",
  "0590f58bc1a527",
  "00f411cde71dcc",
  "00cea0c3562fc2",
  "1283c51ad80fc8",
  "0e4f626e7b110e",
  "18459e527c053f",
  "126a7aa9885ec5",
  "06ffd47fab64e4",
  "17e3a0cfe487a6",
  "08b82296c4f874",
  "0cb22aeee4b83c",
  "0aca0a27910cac",
  "19ed7d3450c75b",
  "0365e2e6fe6e8e",
  "1ef40789bbd42e",
  "16822c2ad0f46c",
  "1d8f306d53230b",
  "176fa53ebf5f08",
  "0674214fbed0b9",
  "0e6b33f6c4902b",
  "08fb11eda20c84",
  "19245413beda90",
  "01aa2b997913ea",
  "11f9acbbcb7526",
  "1504a7256dd100",
  "0abaad69e90ff3",
  "04c13772443e63",
  "18b695e3e4e0ea",
  "12746d78c83fd0",
  "00d63fbfe6bccf",
  "17c408b8004cf4",
  "1292613650dca2",
  "054d93e982b377",
  "19527a9d295c63",
  "044a6d9d25d27d",
  "00b000f2d516ff",
  "0e9ee429e63562",
  "031a3cfe22700c",
  "0f6ab5f903b2ef",
  "00134d14a1bee1",
  "13a15a8803af0e",
  "1475f7a1794b89",
  "1cfaae578402c1",
  "1a59a07ad804b8",
  "01e7e1e5de416d",
  "1306145cef8816",
  "13fbab4f3346d8",
  "05a7c453142365",
  "059b1f056fda0c",
  "121e584c8c76fc",
  "0aa1a5ee7ed5c8",
  "04f10567c01a59",
  "1b8b8d18f4e8a9",
  "198d214c927f15",
  "02dde2837611e3",
  "126d78098e1aa8",
  "1903fab93717c9",
  "0cdb1047d984d2",
  "0eca15e217199a",
  "0cae8d07250d41",
  "183ed6f538e1d6",
  "0bd093c96f6cc3",
  "12fc73f4251acf",
  "05fd7b9ffd0a74",
  "09829d438eeec1",
  "02249a8bf018c8",
  "02249207b5382c",
  "10544c11d0ad6a",
  "048b92115ba454",
  "05c6ca2b8af416",
  "0b81ee6ef4a6ce",
  "0a752b5735c64b",
  "172f86a6955501",
  "1878e23c216990",
  "0a15c02b7a8fac",
  "08b3253646e414",
  "00470063e4e9d4",
  "0f6eff803f3412",
  "04540312b71502",
  "190bdf9e6f139a",
  "11646050e3131c",
  "082ebf4885d6c2",
  "1fa6260c9f4fac",
  "1b7357075aa0ec",
  "1534062a79483e",
  "0186dc331a1c83",
  "1ead144a1dacee",
  "0e45c93a270904",
  "07798efd61eca7",
  "12cf8a75705d5e",
  "190cacbc9d65e9",
  "1c64f95c9e9edc",
  "12e7638274fb7a",
  "17fdea5f96c110",
  "128ede8b0908b3",
  "16e7a0ceef5601",
  "1cf753b4c0c152",
  "183e9390551041",
  "19582b910d9bf3",
  "16f6e9b1ae4d5a",
  "02f0cacb7c0377",
  "17c4bfd9a37c6c",
  "1e0c4ba995776f",
  "04c8946da60b23",
  "05a7f3f4b2b654",
  "129b9a506e1ef5",
  "132131d6c6824f",
  "08d18344262c2c",
  "1fc913d98f4b67",
  "153ef599362cf9",
  "1fb33b3e21a925",
  "0f27d1a64d50f2",
  "08fbf1f4a70907",
  "14ce656373ea46",
  "144976fa6856ac",
  "027298060a0baa",
  "15a19cee124cd9",
  "11ff02b270565c",
  "1cae9d9f80cd6e",
  "05475a7c1be350",
  "019c281393af0a",
  "0001a562b5a5bc",
  "00f33200675219",
  "01b2af492c9815",
  "047ec648f723bc",
  "00ac87f480b9cb",
  "196b57a8ca0078",
  "0eae111fbe2dfb",
  "0c3e20216dd910",
  "0528816d1f76dc",
  "117b0099f19d57",
  "008c1308d00a35",
  "0a93b8ca185cae",
  "06179dc7769cdc",
  "067cb33f620330",
  "00b1e48b362da7",
  "1a03bd3e41c64f",
  "1bd2a045b6d8a4",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1846944c4d716d",
  "04009b3fb7ea9d",
  "16aabcfb714452",
  "03d9e91310912c",
  "14bdb5ed135628",
  "0e6aecd37eb305",
  "17cce676223629",
  "19fe81306d9c47",
  "0c2b2ce41fe4aa",
  "1e650e3f6f2d6d",
  "028ebf4ba078c5",
  "13573548f28b71",
  "1c8a7437911b1c",
  "048cdb6ef032bb",
  "19e1fe5b4da348",
  "0e52159b7eb888",
  "06b756f05607a9",
  "1ca0e8f10aa81a",
  "1fe1d8cb7803d3",
  "0f80e1b8f66077",
  "070701492c2037",
  "084f15ffacdfb9",
  "16f55842903a23",
  "12a0eb6ae6ee18",
  "0e1ea098e183eb",
  "0e89ef1bc3ca64",
  "01c6d3b7959739",
  "0160ad55b91d52",
  "0db5ec6d0e58fe",
  "1ccf9d1975c3c5",
  "1e9d4f031c640c",
  "1ce3483c76ed29",
  "070c2206a52e85",
  "0fc1c7b73a3b67",
  "1615674b813c33",
  "1983698f9111da",
  "0fed086c0df55b",
  "0ea52dc0e268f2",
  "02726ce52c55b1",
  "06de6ec0259fc6",
  "07393a407c5e24",
  "1cbdf84772e5ac",
  "0ce963bdbb5e03",
  "1ecb6ec763c094",
  "12e6103e1b6481",
  "1671b26841dbe6",
  "05db7e21749998",
  "1eb1e402b165ec",
  "18468dc314842f",
  "154194e974307f",
  "1c3faa79b43feb",
  "08f34543c58035",
  "0476c1e75ff053",
  "08c59fd31eedcd",
  "193288a5034edf",
  "0f8919d9d9c26f",
  "19b4f8e779e11c",
  "17141cc1c95d34",
  "1cbfe81aa2c600",
  "138d91df957e56",
  "0e47fabd8b318f",
  "004e300a6f7d87",
  "02d7541f4b4147",
  "00f411cde71dcc",
  "1414c67a7fa61f",
  "0b92e31b39146a",
  "03ce1a9460d8e4",
  "07887e86791ba4",
  "126a7aa9885ec5",
  "019fde5cb0d226",
  "195ac46efea002",
  "1dd84cf64fa640",
  "0af950acdd5aab",
  "09aae866e69683",
  "187c2dd4a715e0",
  "18a7f4a543cce3",
  "03387019de45a1",
  "09d183c52aab42",
  "1d8f306d53230b",
  "12b751305d360d",
  "0e10e818566379",
  "0e6b33f6c4902b",
  "13fb59d38b4d17",
  "0e2af96a8ff494",
  "1f7f0926fe27b6",
  "1b30e68232a9eb",
  "121fcf81af49cd",
  "0e2f4f1872b79d",
  "06b8c3d57c3ea0",
  "1dc2410eb24fe8",
  "1123e3483f043f",
  "00d63fbfe6bccf",
  "0927d73e7a772c",
  "1292613650dca2",
  "054d93e982b377",
  "19527a9d295c63",
  "044a6d9d25d27d",
  "19cd8c52d61bbc",
  "0e9ee429e63562",
  "0b3ec2e0ea6e2f",
  "0560dbced8b71b",
  "018f1bdc696497",
  "13a15a8803af0e",
  "1475f7a1794b89",
  "0a79ff5400a821",
  "1a59a07ad804b8",
  "16cf5859f37b6d",
  "09ab9d0a9a1656",
  "12409c67dd5e51",
  "05a7c453142365",
  "059b1f056fda0c",
  "121e584c8c76fc",
  "0aa1a5ee7ed5c8",
  "0210a72ecd9e1f",
  "15268210740502",
  "0a618e3a894f7d",
  "1032373cedb95e",
  "126d78098e1aa8",
  "16cca8be3fc3f2",
  "1ac1c5677e4819",
  "0ea54280ba196d",
  "074aec105a2bbb",
  "1917060c6e71bf",
  "1cd9c4fb0a1b72",
  "085158b37460b7",
  "0a6300a3c66071",
  "09bb86d9766216",
  "141492083c35b9",
  "02249207b5382c",
  "1d5be8979b4641",
  "17d8650b84a326",
  "1014e757fb8b84",
  "0ac63a70adede1",
  "0a752b5735c64b",
  "16fb7e5c6f8320",
  "11cb7a8bdbe4a3",
  "09ce83479442f1",
  "005dae10ca26dd",
  "00470063e4e9d4",
  "0f6eff803f3412",
  "04540312b71502",
  "0d8f3c97f7a585",
  "11646050e3131c",
  "082ebf4885d6c2",
  "055ef070f7cc67",
  "122a17c1a885a1",
  "1f01c68ef76633",
  "1cdfa3e74f8dfc",
  "1ecac5931ed4b2",
  "0d44eaab519d0e",
  "1282cfe8ecbb8e",
  "0a4c052019cfcf",
  "1061f578438f4f",
  "12359d17c05314",
  "12e7638274fb7a",
  "09a9f972879b1b",
  "030efe37a43ff0",
  "16e7a0ceef5601",
  "1cf753b4c0c152",
  "183e9390551041",
  "0c0e335bd61af1",
  "025413e9d4aa90",
  "02f0cacb7c0377",
  "14435ab1785d15",
  "1e0c4ba995776f",
  "12a44c0eec83ff",
  "05a7f3f4b2b654",
  "11d878722ba851",
  "1326108c24fe72",
  "0a6402d2f025b9",
  "0bf5f7f809b9d1",
  "1a4ab2dc6b0222",
  "0b19bccd0a34ef",
  "0e94b568ac13c2",
  "1cdeb579585ce7",
  "0ef8ccf44e8426",
  "1a9f3f19c92e47",
  "027298060a0baa",
  "15a19cee124cd9",
  "11ff02b270565c",
  "10f7de95b81ff0",
  "05475a7c1be350",
  "019c281393af0a",
  "0945332f61cd85",
  "186d8021ad6d4e",
  "01b2af492c9815",
  "1fff7366085414",
  "00ac87f480b9cb",
  "04777ce1897832",
  "160f02dc64c806",
  "0120b2dd32442a",
  "0386eaa024fae6",
  "1d6ee957d757be",
  "171a33c89e1950",
  "09626b72d7fe90",
  "06179dc7769cdc",
  "060143eb5f8636",
  "09a9ffc25afe39",
  "1eea23cd1d3d3f",
  "157a59901e5941",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "112d8e80bb790e",
  "06cf1df7633de9",
  "1f2d12c899b38a",
  "06659a74377cd8",
  "0dc4376245f7bf",
  "14805e3d61ccfa",
  "0d76bebb7aebd6",
  "058ba98fa64a0a",
  "1325f5d4efdbf1",
  "0d867bed7e28fa",
  "137d2ac7238d0a",
  "1944d7479dd783",
  "0a079c36c7c5a0",
  "0873fe3cbc6ab6",
  "14186508c6101a",
  "1aa073d44076d3",
  "0c94247cc63b7d",
  "1de2e2b741be6a",
  "12334eb8c09b20",
  "0d3f00afa07d61",
  "0e1b8f68dd7a26",
  "048aaac2e21677",
  "0f486591d1d5e1",
  "15fe3ab565e5cd",
  "08f1f0e640e57b",
  "01b2ee3ee3b8d2",
  "05ec1597eccf90",
  "1816a78fcb6395",
  "15233d16fee8a0",
  "1a12c02750219b",
  "0fd5fb78e71be3",
  "1d4ec205986cc8",
  "103adce3092940",
  "1664347e48d8dd",
  "1188397efa873b",
  "13c9f3abdf67b8",
  "155ea7212f2ce7",
  "176048091fa3bd",
  "0ab9232e79a454",
  "1a23d7f1ff8aae",
  "13e3ae0db13ef2",
  "0b42ac3291e3c7",
  "0e09637f6088cc",
  "0083ac5a7d2986",
  "08818747b865ac",
  "0a9d2424817b04",
  "005b8874747acc",
  "00e438ce7b3bdc",
  "029ff63b6b178e",
  "0b81d373332018",
  "15ca5b436883c7",
  "0c2d48a093a777",
  "1402fc06967556",
  "05ca3dd86a9793",
  "02b9cd6cb274bb",
  "1d9d777f8a0b3a",
  "02396321d98ea6",
  "0a82c7ea1f0cf0",
  "1a240efa1a8d95",
  "12cbf5e19490a3",
  "186f72e4f79b71",
  "1821e031fb255d",
  "142799571facc4",
  "0decd3e2b5199c",
  "0d173629e39706",
  "14a1c7b0bfc4e6",
  "07969ba766adde",
  "1670e4b0d13a44",
  "1b63fdc7ceff2e",
  "0332df63002985",
  "0bfe0b63e5b5ec",
  "1c1aa372143723",
  "08b4faf2285bc5",
  "06e256e25f5a8b",
  "1a7fc1aa8515ba",
  "0333e47805fd08",
  "1319e478058728",
  "1afa5ec1164119",
  "1118d37cbf06bd",
  "0fa3d103296f3f",
  "10ebc35a8edacb",
  "1aad297d2293f8",
  "0d04e9f48eca5d",
  "0e39643ca42c4b",
  "10716f17011ba6",
  "0a9a19ed1be2ef",
  "18121733b781e9",
  "187313e597bde1",
  "1ceae1b8324be5",
  "1b993b4e2d89c9",
  "1b9b490be72712",
  "1d3e9acf180fd0",
  "1a18dbc3a60392",
  "08438b3a9f3096",
  "12cd30420f2ac4",
  "1ae57746554392",
  "14001a60738054",
  "191b49bf5eb4fa",
  "12b104c5085640",
  "155f371315febc",
  "1da9e913760406",
  "18e57e417f02e1",
  "17041ef42ffe02",
  "1587290a7a238d",
  "068089cebd9373",
  "0286c074637940",
  "1b1f7e90fd53fd",
  "1c3ecdf7ede737",
  "1eb82dac847b37",
  "0ae6a5025d7b4e",
  "061f401039f658",
  "114ed0bbff853d",
  "1ae23db65e9d71",
  "12ea2ef76fb72a",
  "197233d643e344",
  "1e94cf4b1f552c",
  "0fe94078a33c51",
  "05afd6224b6231",
  "1f705b6d8a4270",
  "146581c6cd68d5",
  "1fd36ea3c76a51",
  "0b12be47391041",
  "02e70ef12db2a8",
  "18548de88418f2",
  "10f955befa684f",
  "09d981d76b2256",
  "19f41f26315e65",
  "1046a16d2f87bc",
  "17c083a4d75a4f",
  "1ded09f2fe5fbd",
  "07ab1113c06084",
  "0abe638e3745d8",
  "040a641110cb78",
  "058c70ab4c620e",
  "01ff2ecb9b958f",
  "1433bdd1b4eafe",
  "00effd892bb1e5",
  "023c09a81da321",
  "083d77fce867cd",
  "0c29d5a59adfdd",
  "1907a52670e0db",
  "196954ce2424e5",
  "117f5e2928d125",
  "1d0bbdd63eaf3d",
  "1f3bc2e13c014a",
  "0bf5506feb063f",
  "031ed90a60bd6d",
  "0a3aaea183b8a3",
  "04276ff743ec60",
  "117fb0eee54bf9",
  "01f444d116bd6f",
  "1b3af578c2b55c",
  "07ce03c2b8d2b7",
  "126b73289d03e6",
  "0d36371f5d91fd",
  "1d757f1a689b97",
  "0e316f52ca4516",
  "08c606d657aced",
  "01d9dea86e99df",
  "03d861e0d13d94",
  "1f20b92741ddc6",
  "0cb6550df4106b",
  "069ba9bc6e9fdc",
  "1f4520769d6ea9",
  "1f9f7bea3663a7",
  "13f0f4a0185f29",
  "1fc3bb8187eef7",
  "011884d7f5dfaf",
  "08638e1f22fa55",
  "1925dc10c12f55",
  "0b60a80d83d298",
  "190a9c9fb775de",
  "14dfba7be102cf",
  "1dcade50f1cca8",
  "123c4b09e6853f",
  "0c7078cc118806",
  "014af3dde5ba2b",
  "1af6af8ef72995",
  "0b12f78f91dd79",
  "12a3a444d040e0",
  "1a1ae45fd2b3bc",
  "0fe33f96afc493",
  "1a9937f57b0417",
  "1c5b43e1b7dcf1",
  "0df6a0377dad63",
  "1f18ea90ca9803",
  "1d061e2d58de6c",
  "0b06bfcaa0942b",
  "02cf4e09e2b031",
  "02836f8646f5f0",
  "0615b948a32d94",
  "1409d8feaf9c59",
  "057c38f0ee2a74",
  "1fc2fcb4d233b2",
  "0763aa7a8e5ae4",
  "1fd9b1ebb7eabc",
  "091ecbc87c5eb9",
  "0a3c3c67e9c3bd",
  "08949df2aa8d94",
  "0cf651b57b7d3d",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "01d09903a67f5e",
  "1162ac00991cd9",
  "0b431ca85a2797",
  "1048369b5f5df1",
  "1421ffb42c68c9",
  "0d0a026cf67e73",
  "0795898ccaf1a2",
  "1cd1523fe91f58",
  "1325f5d4efdbf1",
  "0b4b357d73f8d4",
  "093b7dac717135",
  "0e5a0e25c68fa0",
  "010f34b0622826",
  "0d68ce0adaeeb5",
  "12baae232155d2",
  "07a4d056f77a2f",
  "06319c3d2766b1",
  "1b8ff653602c10",
  "187d27bf7e77b9",
  "1978bcdc0c44ac",
  "1eab411d5a1892",
  "1087189a820181",
  "168ace9a6da2ef",
  "048377845df2d5",
  "08fb1b98fcfafc",
  "18c0e6713b6a52",
  "10109db4afaf59",
  "0ec5da96201c84",
  "0d1c1576d96ba4",
  "083d8de8048541",
  "01e59fbfa2a03a",
  "0bfe394b0feafa",
  "154984b72f1ae8",
  "0525ffe326d5f1",
  "18289268e663f4",
  "1e02b696378872",
  "0dac6e4efc4c1a",
  "1f280bd0d7693a",
  "10176668bc5660",
  "0286349e592765",
  "15bd3c17274fbc",
  "0ffbbbacefcddb",
  "1df62fde1ee680",
  "0d34d5c5ce2204",
  "08c040ffeda015",
  "03b3243ef16fae",
  "15627db605d251",
  "1bfc8b6128b063",
  "1b803ace45e5df",
  "05d93e66e74fce",
  "0072489a08b6a2",
  "0c2d48a093a777",
  "08d70eec3e1db2",
  "15ab211e58c740",
  "00cd932e66b04b",
  "149ca3e3500168",
  "009b03c419df2f",
  "0a82c7ea1f0cf0",
  "046d34a1be3925",
  "1b0075c9852bf7",
  "19a04ba7d93a44",
  "1d54dd6793a7f4",
  "08415f071a7e18",
  "0decd3e2b5199c",
  "1192f822f95b7b",
  "0f49d66b0fa5eb",
  "01860ebb9c6701",
  "083d33c48e3edc",
  "00aac3f8de4610",
  "081909428d7e8d",
  "048d5b738a35c1",
  "18261229515f3f",
  "0b2df7d5e8743a",
  "06b602d5203ee5",
  "0cf86c268e9511",
  "1be70959ae9555",
  "0fb74bbdecaeb2",
  "004bb80ef85d7b",
  "10ac0358bbe287",
  "17aef3f6eb3c0b",
  "0019ba07e2f602",
  "0eeba18cab02a7",
  "01325850e4b2be",
  "07066ed2ce0411",
  "1a101822f69efb",
  "1097713dccc87f",
  "12793a006bb0e7",
  "1d17b06bb1583c",
  "026dd2fc871003",
  "03cbd4c3cf8657",
  "0cd9898d26a261",
  "1c7e51ae7d2d47",
  "0fbce40a4e413a",
  "1cf101b9e4354b",
  "1b54106e032508",
  "09120563aaf837",
  "1433d319eaf57f",
  "1c4b8d83152081",
  "197d3e3cb61d8b",
  "1d32ae77deb7de",
  "1bd79e76ba9437",
  "19a59c352c8aab",
  "1bfa1de546b946",
  "1194eb79499fb6",
  "1ebb48212b1132",
  "1f0fbbfea3785e",
  "13229e9b767b16",
  "0b05334bb92561",
  "165041668a34ca",
  "014c55cdbb9392",
  "125ba2fd15e941",
  "114ed0bbff853d",
  "1c98f6a5226aa0",
  "16a71dd47ca4bf",
  "034acb178082b7",
  "059c3f20e72a98",
  "053675f3700889",
  "06b6c7be905364",
  "09d555ebfa7329",
  "167a17601fabae",
  "0aa0cc72d38906",
  "1952eb9932f9f5",
  "069e6139e2688d",
  "0b345be6cf5ea2",
  "0402ac9cf97eeb",
  "0876f761672944",
  "03fe67107d7aa8",
  "12cd69451dfe21",
  "0de08b7ba3d7cd",
  "193b9323976c5b",
  "07d68ff9205475",
  "040aef4570837f",
  "149a220abab554",
  "1582337ae317a1",
  "03201f1d3ecdbd",
  "12029b8d704954",
  "196e49a5e79f79",
  "1c3cd26aa22d0a",
  "02076086d4f641",
  "176b3c8356fb0a",
  "1907a52670e0db",
  "0ad04df35c1996",
  "117f5e2928d125",
  "00fc8c2b6c7554",
  "0327d9b788e959",
  "17507ca236df41",
  "0b896a9b114070",
  "0d87f1cbbece57",
  "02785ffcd84f52",
  "1c424a1b034c19",
  "1bfb403d897eeb",
  "1ce0e2edded23c",
  "101f6b9eb154b8",
  "12df4e5a1852a5",
  "068f27427884ae",
  "03fcd9548ac900",
  "1f9df418eef434",
  "105bcd1ebbd64d",
  "1a8622b8399ae8",
  "031fe6874a0db0",
  "1737ec0efd4bca",
  "1679701f92e6da",
  "06c433c05ec60f",
  "1576cb863e56b1",
  "00deebe7a3072c",
  "0cee602bd214ae",
  "1fc3bb8187eef7",
  "1401ffb9538fc0",
  "03e755697d2b1c",
  "16cc28825bad02",
  "0481de0f278805",
  "05e8d35ede40da",
  "1658682534051f",
  "0b1266c1793fdf",
  "1906d9bc689957",
  "1c5f1dfbd3bbc1",
  "1fab5c10d88a37",
  "1d61fb425dd0e0",
  "08d24bac4b110e",
  "0046d82e248b17",
  "1ebf34e065a540",
  "09bd70473836c0",
  "172e444527358a",
  "05c1da61963071",
  "17b953c5bd06d8",
  "08bc1f50ee610b",
  "13486778ba382f",
  "18a3bd545abca8",
  "0caadd7baae6bc",
  "1a50d333026492",
  "0fc70b868bdef6",
  "0eed7deb02ce72",
  "01d517eec5cf6d",
  "00bd0fd2d885cc",
  "0cef17617d9d28",
  "0d1a714ab99aa7",
  "027d63cb678976",
  "0d8716401789b5",
  "01f05070060eb9",
  "1fc2107ffd79a7",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "112d8e80bb790e",
  "1162ac00991cd9",
  "1f2d12c899b38a",
  "06659a74377cd8",
  "0dc4376245f7bf",
  "14805e3d61ccfa",
  "0d76bebb7aebd6",
  "058ba98fa64a0a",
  "1325f5d4efdbf1",
  "0b4b357d73f8d4",
  "093b7dac717135",
  "1944d7479dd783",
  "0a079c36c7c5a0",
  "0873fe3cbc6ab6",
  "14186508c6101a",
  "1aa073d44076d3",
  "06319c3d2766b1",
  "1de2e2b741be6a",
  "12334eb8c09b20",
  "0d3f00afa07d61",
  "0e1b8f68dd7a26",
  "1087189a820181",
  "0f486591d1d5e1",
  "048377845df2d5",
  "08f1f0e640e57b",
  "01b2ee3ee3b8d2",
  "05ec1597eccf90",
  "1816a78fcb6395",
  "15233d16fee8a0",
  "083d8de8048541",
  "0fd5fb78e71be3",
  "1d4ec205986cc8",
  "103adce3092940",
  "1664347e48d8dd",
  "1188397efa873b",
  "13c9f3abdf67b8",
  "155ea7212f2ce7",
  "1f280bd0d7693a",
  "0ab9232e79a454",
  "1a23d7f1ff8aae",
  "13e3ae0db13ef2",
  "0b42ac3291e3c7",
  "0e09637f6088cc",
  "0083ac5a7d2986",
  "08c040ffeda015",
  "0a9d2424817b04",
  "005b8874747acc",
  "00e438ce7b3bdc",
  "029ff63b6b178e",
  "05d93e66e74fce",
  "15ca5b436883c7",
  "0c2d48a093a777",
  "1402fc06967556",
  "05ca3dd86a9793",
  "02b9cd6cb274bb",
  "1d9d777f8a0b3a",
  "02396321d98ea6",
  "0a82c7ea1f0cf0",
  "1a240efa1a8d95",
  "1b0075c9852bf7",
  "186f72e4f79b71",
  "1821e031fb255d",
  "142799571facc4",
  "0decd3e2b5199c",
  "0d173629e39706",
  "14a1c7b0bfc4e6",
  "07969ba766adde",
  "1670e4b0d13a44",
  "00aac3f8de4610",
  "0332df63002985",
  "0bfe0b63e5b5ec",
  "1c1aa372143723",
  "08b4faf2285bc5",
  "06e256e25f5a8b",
  "1a7fc1aa8515ba",
  "0333e47805fd08",
  "1319e478058728",
  "1afa5ec1164119",
  "10ac0358bbe287",
  "0fa3d103296f3f",
  "10ebc35a8edacb",
  "0eeba18cab02a7",
  "0d04e9f48eca5d",
  "0e39643ca42c4b",
  "10716f17011ba6",
  "0a9a19ed1be2ef",
  "18121733b781e9",
  "187313e597bde1",
  "1ceae1b8324be5",
  "1b993b4e2d89c9",
  "1b9b490be72712",
  "1c7e51ae7d2d47",
  "1a18dbc3a60392",
  "1cf101b9e4354b",
  "1b54106e032508",
  "09120563aaf837",
  "1433d319eaf57f",
  "191b49bf5eb4fa",
  "197d3e3cb61d8b",
  "155f371315febc",
  "1da9e913760406",
  "18e57e417f02e1",
  "1bfa1de546b946",
  "1194eb79499fb6",
  "068089cebd9373",
  "1f0fbbfea3785e",
  "1b1f7e90fd53fd",
  "1c3ecdf7ede737",
  "1eb82dac847b37",
  "014c55cdbb9392",
  "125ba2fd15e941",
  "114ed0bbff853d",
  "1c98f6a5226aa0",
  "12ea2ef76fb72a",
  "197233d643e344",
  "1e94cf4b1f552c",
  "0fe94078a33c51",
  "06b6c7be905364",
  "1f705b6d8a4270",
  "146581c6cd68d5",
  "1fd36ea3c76a51",
  "0b12be47391041",
  "02e70ef12db2a8",
  "18548de88418f2",
  "10f955befa684f",
  "09d981d76b2256",
  "19f41f26315e65",
  "1046a16d2f87bc",
  "0de08b7ba3d7cd",
  "1ded09f2fe5fbd",
  "07ab1113c06084",
  "0abe638e3745d8",
  "040a641110cb78",
  "1582337ae317a1",
  "01ff2ecb9b958f",
  "1433bdd1b4eafe",
  "00effd892bb1e5",
  "023c09a81da321",
  "02076086d4f641",
  "176b3c8356fb0a",
  "1907a52670e0db",
  "196954ce2424e5",
  "117f5e2928d125",
  "00fc8c2b6c7554",
  "1f3bc2e13c014a",
  "0bf5506feb063f",
  "031ed90a60bd6d",
  "0a3aaea183b8a3",
  "04276ff743ec60",
  "117fb0eee54bf9",
  "01f444d116bd6f",
  "1b3af578c2b55c",
  "07ce03c2b8d2b7",
  "126b73289d03e6",
  "068f27427884ae",
  "1d757f1a689b97",
  "0e316f52ca4516",
  "105bcd1ebbd64d",
  "1a8622b8399ae8",
  "031fe6874a0db0",
  "1f20b92741ddc6",
  "0cb6550df4106b",
  "06c433c05ec60f",
  "1f4520769d6ea9",
  "00deebe7a3072c",
  "13f0f4a0185f29",
  "1fc3bb8187eef7",
  "011884d7f5dfaf",
  "08638e1f22fa55",
  "1925dc10c12f55",
  "0b60a80d83d298",
  "190a9c9fb775de",
  "14dfba7be102cf",
  "1dcade50f1cca8",
  "123c4b09e6853f",
  "0c7078cc118806",
  "014af3dde5ba2b",
  "1d61fb425dd0e0",
  "08d24bac4b110e",
  "0046d82e248b17",
  "1a1ae45fd2b3bc",
  "09bd70473836c0",
  "172e444527358a",
  "1c5b43e1b7dcf1",
  "0df6a0377dad63",
  "08bc1f50ee610b",
  "1d061e2d58de6c",
  "18a3bd545abca8",
  "02cf4e09e2b031",
  "02836f8646f5f0",
  "0615b948a32d94",
  "1409d8feaf9c59",
  "057c38f0ee2a74",
  "1fc2fcb4d233b2",
  "0763aa7a8e5ae4",
  "0d1a714ab99aa7",
  "091ecbc87c5eb9",
  "0a3c3c67e9c3bd",
  "08949df2aa8d94",
  "0cf651b57b7d3d",
]
`;
